# ps4-pkg-tools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerfile.diagnostic  README.md  build-linux.sh  build-mac-docker.sh  build-windows.bat  build.sh  justfile  linux-toolchain.cmake
.github/: MSVCCompatibility.cmake  cryptopp-msvc-patch.h  cryptopp_wrapper.h  strciphr_fix.h  windows-cryptopp-patch.cmake
.github/workflows/: build.yml  docker-build.yml  production-release.yml  release.yml  windows-build.yml
cmake/: CryptoppCompatibility.cmake  MSVCCompatibility.cmake  WindowsCompatibility.cmake
documents/Quickstart/: Quickstart.md
ps4-pkg-tools/: ps4-pkg-extract.py
src/cli/: common_stubs.cpp  log_impl.cpp  main.cpp
src/common/: assert.cpp  ntapi.h
src/core/file_format/: pkg.cpp
src/core/libraries/kernel/threads/: mutex.cpp
src/qt_gui/: gui_context_menus.h  main_window.cpp  main_window_ui.h
